# Game-Lobby-System

./: .gitignore  README.md  docker-compose.prod.yml  docker-compose.yml  start.sh
.github/workflows/: deploy.yml
backend/: CMakeLists.txt  Dockerfile
backend/src/: database_manager.cpp  database_manager.hpp  main.cpp  room.hpp  room_manager.cpp  room_manager.hpp  user.hpp  websocket_server.cpp  websocket_server.hpp
frontend/: Dockerfile  nginx.conf  package.json
frontend/public/: index.html
frontend/src/: App.css  App.js  index.css
frontend/src/components/: Chat.js  CreateRoom.js  Lobby.js  RoomList.js  UserList.js
frontend/src/services/: ApiService.js  WebSocketService.js
